--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  background-color: #ffe0cc !important; /* color melón o durazno pastel */
+  margin: 0;
+  padding: 0;
+  font-family: 'Segoe UI', sans-serif;
+}
